# tuidom

./: .gitignore  AGENTS.md  Cargo.toml  FEATURES.md  GLOSSARY.md  README.md  STYLE.md  flake.nix
docs/: FEATURES.md  GLOSSARY.md  README.md  STYLE.md  animation.md  architecture.md  colors.md  events.md  focus-and-selection.md  getting-started.md  layout.md  rendering.md  scrolling.md  styling.md  testing.md  virtualization.md
tuidom/: Cargo.toml
tuidom-derive/: Cargo.toml
tuidom-derive/src/: lib.rs
tuidom-macros/: Cargo.toml
tuidom-macros/src/: lib.rs
tuidom-macros/src/style/: mod.rs  props.rs  value.rs
tuidom-macros/tests/: ui.rs
tuidom-macros/tests/ui/: color_var_in_non_color.rs  color_var_in_non_color.stderr  edge_arity.rs  edge_arity.stderr  spread_not_first.rs  spread_not_first.stderr  unknown_property.rs  unknown_property.stderr  unknown_side.rs  unknown_side.stderr
tuidom/benches/: frame.rs
tuidom/examples/: demo.rs  mvp.rs
tuidom/src/: debug.rs  document.rs  error.rs  event_loop.rs  geometry.rs  headless.rs  id.rs  inner.rs  lib.rs  lock.rs  node.rs  paint_order.rs  panic.rs  performance.rs  runtime_event.rs
tuidom/src/animation/: driver.rs  keyframes.rs  mod.rs  value.rs
tuidom/src/document/: animation.rs  attrs.rs  events.rs  focus.rs  focus_context.rs  input.rs  layout.rs  mod.rs  pseudo.rs  scroll.rs  selection.rs  snapshot.rs  style.rs  tests.rs  tree.rs
tuidom/src/event/: key.rs  mod.rs
tuidom/src/layout/: mod.rs
tuidom/src/render/: diff.rs  grid.rs  mod.rs  paint.rs  terminal.rs
tuidom/src/style/: border.rs  color.rs  macro_tests.rs  mod.rs  resolution.rs  scrollbar.rs
tuidom/src/virtualize/: measure.rs  mod.rs  virtualizer.rs
