[package]
name = "tuidom-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Macros for the tuidom terminal UI engine"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.107"
quote = "1.0.47"
syn = { version = "2.0.117", features = ["full"] }

[dev-dependencies]
trybuild = "1"
