[package]
name = "tuidom"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "A DOM-based terminal UI library for Rust"

[dependencies]
dashmap = "6.2.1"
palette = "0.7.6"
# Re-export macro
tuidom-derive = { path = "../tuidom-derive" }
