[package]
name = "tuidom"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "A DOM-based terminal UI library for Rust"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
dashmap = "6.2.1"
log = "0.4.32"
palette = "0.7.6"
taffy = "0.11.0"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["rt", "sync", "macros", "time", "rt-multi-thread"] }
tokio-stream = "0.1.18"
# Re-export macro
tuidom-derive = { path = "../tuidom-derive" }
unicode-width = "0.2.2"
unicode-segmentation = "1.12.0"

[dev-dependencies]
criterion = "0.8.2"
simplelog = "0.12.2"

[[bench]]
name = "frame"
harness = false
