[package]
name = "tuidom"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "A DOM-based terminal UI library for Rust"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
dashmap = "6.2.1"
palette = "0.7.6"
taffy = "0.11.0"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["rt", "sync", "macros", "time", "rt-multi-thread"] }
tokio-stream = "0.1.18"
unicode-width = "0.2.2"
unicode-segmentation = "1.12.0"
rustc-hash = "2.1.3"
tracing = "0.1.44"
tuidom-macros = { path = "../tuidom-macros", version = "0.1.0" }

[dev-dependencies]
criterion = "0.8.2"
tracing-subscriber = "0.3.23"

[[bench]]
name = "frame"
harness = false
